bash.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: bash
spec:
  volumes:
    - name: rootfs
      hostPath:
        path: /
  containers:
    - name: debian
      image: debian:stable
      stdin: true 
      tty: true
      volumeMounts:
        - { name: rootfs, mountPath: /rootfs }
