paris-app-whoami.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: paris-app
  name: whoami
  labels:
    app: whoami
spec:
  volumes:
    - name: storage
    - name: config-map
      configMap:
        name: config
    - name: scripts
      configMap:
        name: scripts
        defaultMode: 0755
    - name: certs
      configMap:
        name: certs
  containers:
    - name: consul
      image: consul:latest
      command: [ /consul/scripts/client.sh ]
      volumeMounts:
        - { name: storage, mountPath: /consul/data }
        - { name: config-map, mountPath: /consul/config }
        - { name: certs, mountPath: /consul/certs }
        - { name: scripts, mountPath: /consul/scripts }
    - name: whoami
      image: traefik/whoami:latest
      ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: paris-app
  name: whoami
spec:
  type: LoadBalancer
  selector:
    app: whoami
  ports:
    - name: http
      port: 8080
      targetPort: http
